# cps-ci

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake.yml  cmake_test.yml  test.yml
src/: CMakeLists.txt
src/cps/: config.hpp.in
tests/: CMakeLists.txt
